fix: adjust Lucide icon vertical alignment from -0.125em to middle

--- a/web/style.css
+++ b/web/style.css
@@ -615,9 +615,9 @@ td {
 /* ===== Lucide Icons ===== */
 i[data-lucide] {
     display: inline-block;
-    width: 1em;
-    height: 1em;
-    vertical-align: -0.125em;
+    width: 1.1em;
+    height: 1.1em;
+    vertical-align: middle;
     stroke-width: 2;
 }
 
